Fix z-index in header

--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ h5 {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
+  z-index: 15;
   top: 0;
   left: 0;
   opacity: 0;
@@ -310,7 +311,7 @@ h5 {
   width: 100%;
   position: fixed;
   top: 0;
-  z-index: 100;
+  z-index: 10;
   background-color: transparent;
   opacity: 0;
   -webkit-transition: all 0.3s;
@@ -343,7 +344,7 @@ h5 {
 }
 .main-header__button {
   border: 3px solid #F6762C;
-  z-index: 100;
+  z-index: 10;
 }
 .main-header__button:hover {
   color: #fff;
