--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,7 +2,7 @@
     width: 100%;
     position: fixed;
     top: 0;
-    z-index: 100;
+    z-index: 10;
     background-color: transparent;
     opacity: 0;
     transition: all 0.3s;
@@ -19,7 +19,7 @@
     }
     &__button{
         border: 3px solid $button-color;
-        z-index: 100;
+        z-index: 10;
         &:hover{
             color: #fff;
         }
