--- a/scss/_start-styles.scss
+++ b/scss/_start-styles.scss
@@ -158,6 +158,7 @@ h5{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
+    z-index: 15;
     top: 0;
     left: 0;
     opacity: 0;
